# tecc

./: Cargo.toml  LICENSE
.github/workflows/: CI.yml
driver/: Cargo.toml
harrington/: Cargo.toml  README.md
harrington/src/: automaton.rs  lib.rs
lattice/: Cargo.toml
lattice/src/: graph.rs  lattice.rs
